<resources>

    <string name="app_name">ExistingSQLiteDatabase</string>
    <string name="hello_world">Hello world!</string>
    <string name="search_color_prompt">Select Primary Color</string>
    <string name="search_location_prompt">Select Location Viewed</string>
    <string name="search_shape_prompt">Select Bird Shape</string>
    <string name="search_size_prompt">Select Bird Size</string>
    <string name="search_tail_prompt">Select Tail Type</string>
    <string name="search_wing_prompt">Select Wing Type</string>
    <string name="search_bill_prompt">Select Bill Type</string>
    <string name="search_iris_prompt">Select Iris Color</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Search Page</string>
    <string name="title_activity_splash">BirdNerd</string>
    <string name="title_activity_query">Search Results</string>
    <string name="title_activity_result">Detailed Information</string>
    <string name="splash_greeting">BirdNerd is designed with bird lovers in mind.  This easy to use app is perfect for anyone with a passion in ornothology.  So whether you\'re a novice bird watcher, or an over the top BirdNerd, you\'ll find something to flap your wings about!</string>
    <string name="splash_copyright">Copyright Christopher Kian 2013</string>
    <string name="splash_csu">CSU Chico Capstone Project</string>
    <string name="splash_disclamer">Images and Data By WhatBird.com</string>

</resources>